# rust_solr_graphql

./: Cargo.toml
config/: Default.toml  Production.toml
src/: main.rs  schema.rs  settings.rs
