[package]
name = "actix-graphql-solr"
version = "0.1.0"
authors = ["Chris Lam <christopher.lam@grainger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
config = "0.10.1"
actix-cors = "0.4.0"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
lazy_static = "1.4"
juniper = "0.14.2"
stellr = "0.1.0"
tokio = {version = "0.2.*", features = ["full"] }

#serde = { version = "1.0.103", features = ["derive"] }
#serde_json = "1.0.44"
#futures = { version = "0.3.*" }

[patch.crates-io]
stellr = { path = "/Users/xcxl200/git/development/rust/stellr"}
